### Fixed
- Now surely remote configurations are editable in the settings dialogue.
- We can fetch remote settings from the remote and apply them to the local settings for each remote configuration entry.
- No longer layout breaking occurs when the description of a remote configuration entry is too long.

--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,12 @@
     overflow-y: scroll;
 }
 
+.sls-remote-list .setting-item-description {
+    white-space: normal;
+    overflow-wrap: anywhere;
+    word-break: break-word;
+}
+
 .sls-plugins-tbl {
     border: 1px solid var(--background-modifier-border);
     width: 100%;
